[package]
name = "woop-attack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive"] }
clokwerk = "0.4.0"
env_logger = "0.11.3"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha2 = "0.10.8"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.12"
utoipa = "4.2.0"
utoipa-rapidoc = "3.0.0"
warp = "0.3.6"
