[package]
name = "woop-attack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
clokwerk = "0.4.0"
env_logger = "0.11.8"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.23"
utoipa = "4.2.3"
utoipa-rapidoc = "3.0.0"
warp = "0.3.7"
